# 6-Axis-robot-ROS2-control-movet-gazebo-

./: .env  .env.example  .gitignore  6-Axis-robot-ROS2-control-movet-gazebo-.sln  AI_WORKFLOW.md  API_AND_CONNECTIONS.md  AUDIT_RESULTS.md  BUILD.bat  BUILD_DEBUG.bat  CLEAN.bat  CODE_REVIEW.md  CREATE_DEPLOY_PACKAGE.ps1  IMPLEMENTATION_PLAN.md  LAUNCH.ps1  LAUNCH_WITH_VS_ENV.bat  LIVE_MONITOR.ps1  OFFLINE_SYSTEM.md  ONLINE_SYSTEM.md  OnlineUpdate.md  PHYSICAL_READ_MODE.md  PROJECT_STRUCTURE.md  QUICK_ACCESS.md  README.md  ROBOFORGE_GLOBAL_SYSTEM.md  ROBOFORGE_UNIFIED_ARCHITECTURE.md  RUN.bat  SETUP_AND_BUILD.ps1  STARTUP_GUIDE.md  START_SYSTEM.ps1  SUPERVISOR_ITERATION_REPORT.md  SYSTEM_LOGIC_AND_FLOW.md  SYSTEM_ORGANIZATION.md  SYSTEM_WALKTHROUGH.md  TEST_BUILD.ps1  TEST_SIMULATION_REPORT.md  USAGE.md  USER_OPERATION_GUIDE.md  VERIFICATION_AND_ROLLBACK.md  VERIFICATION_REPORT.md  bridge.txt  (+26 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
.qwen/: ANTIGRAVITY_PLAN.md  COMBINED_WORKFLOW.md  SESSION_SUMMARY.md  SYSTEM_OVERVIEW.md  SYSTEM_STATUS.md  TASKS.md  settings.json
RoboForge_WPF/: App.xaml  App.xaml.cs  Reflector.cs  RoboForge_WPF.csproj  hit_props.txt
RoboForge_WPF/Assets/: robot.urdf
RoboForge_WPF/Services/: CliApiService.cs
RoboForge_WPF/Themes/: Colors.xaml  Styles.xaml
RoboForge_WPF/Views/: IORow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
RobotCLI/: Program.cs  RobotCLI.csproj
RobotSimulator/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RobotSimulator.csproj
RobotSimulator_CPP/: CMakeLists.txt  main.cpp  test_dummy.cpp  toolchain-msvc1950.cmake  vcpkg.json
RobotSimulator_CPP/assets/: robot.urdf
RobotSimulator_CPP/engine/: dx12_core.cpp  dx12_core.h  dx12_mesh.cpp  dx12_mesh.h  ros_client.h
RobotSimulator_CPP/robot/: robot_model.cpp  robot_model.h
RobotSimulator_CPP/simulation/: motion_engine.cpp  motion_engine.h
RobotSimulator_CPP/tests/: test_main.cpp
RobotSimulator_CPP/ui/: calibration_panel.cpp  calibration_panel.h  pipeline_view.cpp  pipeline_view.h  ui_context.cpp  ui_context.h
RobotSimulator_CPP/ui_v2/: program_model.h
TeachPendant_WPF/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  TeachPendant_WPF.csproj
TeachPendant_WPF/Assets/: robot.urdf
TeachPendant_WPF/Models/: AppDbContext.cs  RobotInstruction.cs  (+2 more)
_archive/: build.ps1  capture_front.ps1  compile_check.ps1  gazebo_check.txt  launch_roboforge.ps1  run_interactive.ps1  run_roboforge.ps1  run_side_by_side.ps1  run_simulation.ps1  start_ros_services.sh  test_full_pipeline.ps1  verification.ps1  verify_pipeline.ps1
ci_tests/: test_ik.py  test_planner.py  test_smoothing.py
config/: encoder_config.yaml  robot_params.yaml
controller/: hardware_map.yaml
deploy/: README.md
deploy_package/: README.md  docker-compose.yml
docker/: Dockerfile.base  Dockerfile.gazebo  Dockerfile.roboforge_bridge  Dockerfile.ros  Dockerfile.ui  Dockerfile.unified  docker-compose.real.yml  docker-compose.sim.yml  docker-compose.yml  ros_entrypoint.sh
docs/: ARCHITECTURE_WHITEPAPER.md  CI_REGRESSION_PLAN.md  PHASE5_CONTROLLER_GUIDE.md  USAGE.md  qwen output.md
firmware/: hardware_config.h
logic_simulator/: README.md  bus.py  fake_controller.py  hardware_bridge.py  messages.py  pick_and_place.py  read_logs.py  sim_output.txt  sim_output_2.txt  simulator_main.py
scripts/: automated_logic_test.py  download_meshes.ps1  download_meshes_v2.ps1  launch_simulation.ps1  ros_task_node.py  run_ci_pipeline.ps1  run_logic_tests.ps1  run_simulation.sh  run_visible_local.sh  run_visible_sim.sh  setup_ros2_wsl.sh  start_real.ps1  start_sim.ps1  stop_all.ps1  verify_phase1.ps1  verify_phase2.ps1  verify_phase3.ps1  verify_phase4.ps1  verify_system.sh
src/robot_analysis/: package.xml  pyproject.toml  setup.py
src/robot_analysis/launch/: analysis.launch.py
src/robot_analysis/robot_analysis/: __init__.py  accuracy_logger.py  accuracy_node.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: joint_limits.yaml
src/robot_description/launch/: display.launch.py  mode_real.launch.py  mode_sim.launch.py  robot.launch.py
src/robot_description/meshes/: README.md
src/robot_description/urdf/: custom_6axis_test.urdf.xacro  robot.urdf.xacro
src/robot_gazebo/: CMakeLists.txt  package.xml
src/robot_gazebo/config/: gazebo_controllers.yaml
src/robot_gazebo/launch/: gazebo.launch.py
src/robot_gazebo/worlds/: default.world
src/robot_hardware_bridge/: CMakeLists.txt  package.xml  pyproject.toml  setup.py
src/robot_hardware_bridge/include/robot_hardware_bridge/: bridge_node.hpp  real_hw_interface.hpp  visibility_control.h
src/robot_hardware_bridge/launch/: bridge.launch.py
src/robot_hardware_bridge/real_backend/: controller_interface.py  protocol_adapter.py  safety_watchdog.py
src/robot_hardware_bridge/resource/: robot_hardware_bridge
src/robot_hardware_bridge/robot_hardware_bridge/: __init__.py  bridge_node.py  moveit_adapter_node.py  real_backend.py  sim_backend.py
src/robot_hardware_bridge/robot_hardware_bridge/real_backend/: safety_watchdog.py
src/robot_hardware_bridge/src/: bridge_node.cpp
src/robot_moveit_config/: CMakeLists.txt  package.xml
src/robot_moveit_config/config/: controllers.yaml  kinematics.yaml  kinematics.yaml.bak  kinematics_tracik.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  robot_arm.srdf  trajectory_execution.yaml
src/robot_moveit_config/launch/: move_group.launch.py
src/robot_tests/: CMakeLists.txt  package.xml
src/robot_tests/src/: motion_stack_test_node.cpp
tests/: full_motion_validation_test.py  full_physical_sim_test.py  full_unified_sim_test.py  pipeline_check.py  pipeline_verifier.py  real_hardware_loop_test.py  realtime_diagnostic.py  sim_validation_suite.py
tools/: audit_moveit_config.py  deploy.ps1  import_urdf.ps1  install_vs_tools.ps1  intercept_data_flow.py  pipeline_diagnostics.py  retool_xaml.py  retool_xaml_rightnav.py  select_ik_solver.py  solidworks_urdf_pipeline.py  test_e2e_compilation_flow.py  test_pipeline.py
(+336 files in other folders)
