<?xml version="1.0"?>
<package format="3">
  <name>robot_analysis</name>
  <version>1.0.0</version>
  <description>
    Analysis and logging tools for robot system.
    NON-AUTHORITATIVE, OBSERVATION ONLY.
    
    This package subscribes to system state and performance metrics
    for logging and analysis purposes. It has no control authority.
  </description>
  <maintainer email="robot@example.com">Robot Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>robot_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
