<?xml version="1.0"?>
<package format="3">
  <name>robot_description</name>
  <version>1.0.0</version>
  <description>Robot URDF description, meshes, and configuration</description>
  <maintainer email="robot@example.com">Robot Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
