<?xml version="1.0"?>
<package format="3">
  <name>robot_gazebo</name>
  <version>1.0.0</version>
  <description>
    Gazebo simulation for robot system (NON-RT, NON-CERTIFIED)
    
    IMPORTANT: SIM mode does not constitute safety validation.
    Gazebo provides physics emulation for testing only.
    All safety testing must be with real hardware.
    
    This package is OPTIONAL and only used in SIM mode.
  </description>
  <maintainer email="robot@example.com">Robot Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>robot_description</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
