<?xml version="1.0"?>
<package format="3">
  <name>robot_moveit_config</name>
  <version>1.0.0</version>
  <description>MoveIt 2 configuration for robot arm (NON-REAL-TIME, REQUEST ONLY)</description>
  <maintainer email="robot@example.com">Robot Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>robot_description</depend>

  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
